10 April 2015: Wouter
	- unbound-control ratelimit_list lists high rate domains.
	- ratelimit feature, ratelimit: 100, or some sensible qps, can be
	  used to turn it on.  It ratelimits recursion effort per zone.
	  For particular names you can configure exceptions in unbound.conf.
	- Fix that get_option for cache-sizes does not print double newline.
	- Fix#663: ssl handshake fails when using unix socket because dh size
	  is too small.

8 April 2015: Wouter
	- Fix crash in dnstap: Do not try to log TCP responses after timeout.

7 April 2015: Wouter
	- Libunbound skips dos-line-endings from etc/hosts.
	- Unbound exits with a fatal error when the auto-trust-anchor-file
	  fails to be writable.  This is seconds after startup.  You can
	  load a readonly auto-trust-anchor-file with trust-anchor-file.
	  The file has to be writable to notice the trust anchor change,
	  without it, a trust anchor change will be unnoticed and the system
	  will then become inoperable.
	- unbound-control list_insecure command shows the negative trust
	  anchors currently configured, patch from Jelte Jansen.

2 April 2015: Wouter
	- Fix #660: Fix interface-automatic broken in the presence of
	  asymmetric routing.

26 March 2015: Wouter
	- remote.c probedelay line is easier to read.
	- rename ldns subdirectory to sldns to avoid name collision.

25 March 2015: Wouter
	- Fix #657:  libunbound(3) recommends deprecated
	  CRYPTO_set_id_callback.
	- If unknown trust anchor algorithm, and libressl is used, error
	  message encourages upgrade of the libressl package.

23 March 2015: Wouter
	- Fix segfault on user not found at startup (from Maciej Soltysiak).

20 March 2015: Wouter
	- Fixed to add integer overflow checks on allocation (defense in depth).

19 March 2015: Wouter
	- Add ip-transparent config option for bind to non-local addresses.

17 March 2015: Wouter
	- Use reallocarray for integer overflow protection, patch submitted
	  by Loganaden Velvindron.

16 March 2015: Wouter